# briscola

./: .gitignore  .pylintrc  .travis.yml  README.md  Unrefined ER.graphml  briscola-app.py  classes.py  database.db  docs.md  flask-briscola.py  forms.py  pyproject.toml  requirements.txt  run_dev.sh  sandbox.py  schema.sql  unnamed0.graphml
.devcontainer/: Dockerfile  devcontainer.json
briscola/: .flaskenv  .gitignore  __init__.py  application.py  flask_briscola.py  flask_briscola_rest.py  game.py  routes.py
briscola/endpoint/: lobby_endpoint.py
briscola/model/: card.py  deck.py  lobby.py
briscola/repository/: lobby_repository.py
briscola/service/: lobby_service.py
briscola/templates/: base.html  index.html
database/: development.db  init_db.py  schema.sql
docs/: http.md  model.md  user_stories.md
docs/schemas/: Flux chart stub.graphml  Unrefined ER.graphml
src/: application.py  util.py
src/dto/: game_bootstrap.py  game_state.py  player_move.py
src/endpoint/: lobby_endpoint.py  player_endpoint.py
src/model/: card.py  deck.py  game.py  game_player.py  hand.py  lobby.py  lobby_player.py  player.py  stack.py  won_stack.py
src/repository/: db_factory.py  game_player_repository.py  game_repository.py  game_state_repository.py  hand_repository.py  lobby_player_repository.py  lobby_repository.py  player_repository.py  stack_repository.py  transaction.py
src/service/: bootstrap_utils.py  game_service.py  (+2 more)
templates/: index.html
test/: test_pirates.py  test_utils.py
tests/: test_deck.py  test_flask_briscola.py  test_flask_briscola_rest.py
(+13 files in other folders)
