[tool.poetry]
name = "briscola"
version = "0.1.0"
description = "briscola web app"
authors = ["Alessandro Baldi Vitali <alessandro.vitali1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
